--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {% if client_id %}
+    {% if gmap_api_key %}
         <script type="text/javascript"
-                src="https://maps.googleapis.com/maps/api/js?v=3.exp&client={{ client_id }}&libraries=geometry,drawing"></script>
+                src="https://maps.googleapis.com/maps/api/js?v=3.exp&key={{gmap_api_key}}&libraries=geometry,drawing"></script>
     {% else %}
         <script type="text/javascript"
                 src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing"></script>
