--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -16,7 +16,7 @@
 <div class="full-height full-bg-image" ng-cloak>
     <div id="ui-login" class="login-frame" layout-fill flex layout="column">
         <div layout="row" flex layout-padding layout-fill layout-align="center center">
-            <div flex="40" flex-lg="50" flex-md="70" flex-sm="100">
+            <div flex="100">
                 <md-card class="md-red-theme">
                     <md-toolbar layout-align="center center">
                         <div class="padding-20 text-center">
